objects/evt__Attendee__c.object
<CustomObject>
    <customHelpPage>evt__EventManagementHelp</customHelpPage>
    <description>Event attendees</description>
    <fields>
        <fullName>ABA_AP_Event__c</fullName>
        <label>ABA AP Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <description>Converts Total Paid field (text field) to currency format</description>
        <formula>VALUE(Total_Paid__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <description>Date Client Will arrive for Event</description>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attended_Checkbox__c</fullName>
        <formula>IF(TEXT(evt__Invitation_Status__c) = &apos;Attended&apos;, TRUE, FALSE)</formula>
        <label>Attended Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVV_Code__c</fullName>
        <label>CVV Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>evt__Contact__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_State__c</fullName>
        <formula>IF(ISBLANK(evt__Contact__r.Account.BillingState), evt__Contact__r.Account.ShippingState, evt__Contact__r.Account.BillingState)</formula>
        <label>Client State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>HYPERLINK(&quot;https://na48.salesforce.com/&quot; + evt__Contact__r.AccountId, evt__Contact__r.Account.Name  )</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Note__c</fullName>
        <label>Confirmation Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <formula>evt__Contact__r.Confirmation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmation #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_by__c</fullName>
        <label>Confirmed by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Attendee_Confirmed_By</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon_Code_Used__c</fullName>
        <description>Coupon Code Used for Sale</description>
        <label>Coupon Code Used</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Reservation__c</fullName>
        <label>Credit Card Reservation #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <label>Date Registered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <description>The Date the Client will be Departing</description>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edit_Check_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Check Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <formula>evt__Event__r.evt__Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Rep__c</fullName>
        <description>Name of rep who called the Client</description>
        <label>Event Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Contact_Date__c</fullName>
        <inlineHelpText>Date First Contact was attempted for Event</inlineHelpText>
        <label>First Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Contact_Rep_Name__c</fullName>
        <label>First Contact Rep Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <label>First Contact Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left VM</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Spoke With Client</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Event_Note__c</fullName>
        <description>First Contact About Event</description>
        <label>First Event Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guest_2__c</fullName>
        <description>Name of 2nd guest coming to Event</description>
        <label>Guest Name #2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_3__c</fullName>
        <description>Name of 3rd guest</description>
        <label>Guest Name #3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Attendee__c</fullName>
        <label>Guest Attendee ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guests_Name__c</fullName>
        <description>Name of 1st Guest coming to Event</description>
        <label>Guests Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Air_Confirmation__c</fullName>
        <description>Confirmation # of Attendee Hotel or Flight #</description>
        <label>Hotel/Air Confirmation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Confirmed_By__c</fullName>
        <formula>IF(
TEXT(Confirmed_by__c) = &quot;Cynthia Markus&quot; &amp;&amp; $User.Id = &quot;0050B000006mAaF&quot;, 1,
IF(
TEXT(Confirmed_by__c) = &quot;Shea Mayo&quot; &amp;&amp; $User.Id = &quot;0050B000007ZKdw&quot;, 1,
IF(
TEXT(Confirmed_by__c) = &quot;Kerri Summey&quot; &amp;&amp; $User.Id = &quot;0050B000006nrc0&quot;, 1,
IF(
TEXT(Confirmed_by__c) = &quot;Eric Russell&quot; &amp;&amp; $User.Id = &quot;0050B000006ng3R&quot;, 1, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Confirmed By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Event_Rep__c</fullName>
        <formula>IF(
Event_Rep__c = &quot;Cynthia Markus&quot; &amp;&amp; $User.Id = &quot;0050B000006mAaF&quot;, 1,
IF(
Event_Rep__c = &quot;Tameka Fulton&quot; &amp;&amp; $User.Id = &quot;0050B000008Pt1q&quot;, 1,
IF(
Event_Rep__c = &quot;Kerri Summey&quot; &amp;&amp; $User.Id = &quot;0050B000006nrc0&quot;, 1,
IF(
Event_Rep__c = &quot;Eric Russell&quot; &amp;&amp; $User.Id = &quot;0050B000006ng3R&quot;, 1,
IF(
Event_Rep__c = &quot;Suzanne Wood&quot; &amp;&amp; $User.Id = &quot;0050B000008PksH&quot;, 1, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Event Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Campaign_Source__c</fullName>
        <formula>evt__Contact__r.Account_Original_Campaign_Source__c</formula>
        <label>Original Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Event_Note__c</fullName>
        <description>Note taken from event.</description>
        <label>Original Event Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <formula>evt__Contact__r.Account_Parent_Campaign__c</formula>
        <label>Parent Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <formula>evt__Payment__r.pymt__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Coupon_Code__c</fullName>
        <formula>evt__Payment__r.evt__Coupon_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Coupon Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum__c</fullName>
        <description>Checks to see if the guest&apos;s primary contact is a Platinum member.</description>
        <formula>IF(ISBLANK(evt__Contact__r.Account.Platinum__c), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks to see if the guest&apos;s primary contact is a Platinum member.</inlineHelpText>
        <label>Platinum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <label>Room Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>King</fullName>
                </value>
                <value>
                    <fullName>Double Queen</fullName>
                </value>
                <value>
                    <fullName>King Smoking</fullName>
                </value>
                <value>
                    <fullName>Double Queen Non-Smoking</fullName>
                </value>
                <value>
                    <fullName>Suite</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Handicap</fullName>
                </value>
                <value>
                    <fullName>Needs 2 Rooms</fullName>
                </value>
                <value>
                    <fullName>Other Accommodations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Call__c</fullName>
        <label>Second Contact Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left VM</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Spoke With Client</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Contact_Date__c</fullName>
        <label>Second Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Second_Contact_Rep_Name__c</fullName>
        <label>Second Contact Rep Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Event_Note__c</fullName>
        <label>Second Event Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <description>The speakers for the Original Campaign Source of the attendee&apos;s associated client.</description>
        <formula>IF(INCLUDES( evt__Contact__r.Account.Original_Campaign_Source__r.Speakers__c , &quot;Clint Coons&quot;), &quot;Clint Coons, &quot;, NULL) &amp;
IF(INCLUDES( evt__Contact__r.Account.Original_Campaign_Source__r.Speakers__c , &quot;Toby Mathis&quot;), &quot;Toby Mathis, &quot;, NULL) &amp;
IF(INCLUDES( evt__Contact__r.Account.Original_Campaign_Source__r.Speakers__c , &quot;Michael Bowman&quot;), &quot;Michael Bowman, &quot;, NULL) &amp;
IF(INCLUDES( evt__Contact__r.Account.Original_Campaign_Source__r.Speakers__c , &quot;Carl Zoellner&quot;), &quot;Carl Zoellner, &quot;, NULL) &amp;
IF(INCLUDES( evt__Contact__r.Account.Original_Campaign_Source__r.Speakers__c , &quot;Aaron Soffer&quot;), &quot;Aaron Soffer, &quot;, NULL) &amp;
IF(INCLUDES( evt__Contact__r.Account.Original_Campaign_Source__r.Speakers__c , &quot;Corey Posgay&quot;), &quot;Corey Posgay, &quot;, NULL) &amp;
IF(INCLUDES( evt__Contact__r.Account.Original_Campaign_Source__r.Speakers__c , &quot;David Gass&quot;), &quot;David Gass&quot;,NULL)</formula>
        <label>Speaker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Contact_Rep_Name__c</fullName>
        <label>Third Contact Rep Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Contact__c</fullName>
        <label>Third Contact Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left VM</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Spoke With Client</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Date__c</fullName>
        <label>Third Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Third_Event_Note__c</fullName>
        <label>Third Event Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Titanium__c</fullName>
        <description>Checks if the guest&apos;s primary contact has Titanium.</description>
        <formula>IF(ISBLANK( evt__Contact__r.Account.Unlimited_LLC__c ), FALSE, TRUE)</formula>
        <inlineHelpText>Checks if the guest&apos;s primary contact has Titanium.</inlineHelpText>
        <label>Titanium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Guests_Attending__c</fullName>
        <label>Total Guests Attending</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <description>Total Paid for tickets</description>
        <label>Total Paid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <description>How the attendee with be arriving to the event</description>
        <label>Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Flying</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTM_Data__c</fullName>
        <description>This is the field that will display what campaign/ Affiliate we are getting attendees from.</description>
        <label>UTM Data</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evt__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendee</fullName>
                </value>
                <value>
                    <fullName>Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evt__Company__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK( evt__Contact__c ) , BLANKVALUE( evt__Lead__r.Company , &quot;&quot;) , BLANKVALUE( evt__Contact__r.Account.Name , &quot;&quot;))),evt__Reg_Company__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Email__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK(  evt__Contact__c  ) ,  BLANKVALUE(  evt__Lead__r.Email , &quot;&quot;) ,  BLANKVALUE(  evt__Contact__r.Email , &quot;&quot;))),evt__Reg_Email__c)</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Event__c</fullName>
        <label>Event</label>
        <referenceTo>evt__Special_Event__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>evt__External_Attendee_ID__c</fullName>
        <description>Id assigned to the attendee by a web meeting system or other external application.</description>
        <inlineHelpText>Id assigned to the attendee by a web meeting system or other external application.</inlineHelpText>
        <label>External Attendee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__First_Name__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK(  evt__Contact__c  ) ,  BLANKVALUE(  evt__Lead__r.FirstName , &quot;&quot;) ,  BLANKVALUE(  evt__Contact__r.FirstName , &quot;&quot;))),evt__Reg_First_Name__c)</formula>
        <inlineHelpText>If the Reg Name fields are set, Attendee Info will display registration detail fields, otherwise, if Contact is assigned, contact mailing address details will be displayed. Finally, if only Lead has been assigned, lead address details will be displayed.</inlineHelpText>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Id_Barcode_Attachment__c</fullName>
        <description>Record ID of the attachment containing this attendee&apos;s Id barcode image.</description>
        <inlineHelpText>Record ID of the attachment containing this attendee&apos;s Id barcode image.</inlineHelpText>
        <label>Id Barcode Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Id_Barcode_Image__c</fullName>
        <formula>IMAGE(IF(ISBLANK(evt__Id_Barcode_Attachment__c),&apos;/s.gif&apos;,&apos;/servlet/servlet.FileDownload?file=&apos;+evt__Id_Barcode_Attachment__c), &apos;Image not available.&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Barcode Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Id_QR_Attachment__c</fullName>
        <description>Record ID of the attachment containing this attendee&apos;s Id QR code image.</description>
        <inlineHelpText>Record ID of the attachment containing this attendee&apos;s Id QR code image.</inlineHelpText>
        <label>Id QR Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Id_QR_Image__c</fullName>
        <formula>IMAGE(IF(ISBLANK(evt__Id_QR_Attachment__c),&apos;/s.gif&apos;,&apos;/servlet/servlet.FileDownload?file=&apos;+evt__Id_QR_Attachment__c), &apos;Image not available.&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id QR Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Image_Id__c</fullName>
        <description>Attach an image file to this record to populate this field with an attachment Id. If a value has been set for the Image URL field, this value will be ignored.</description>
        <inlineHelpText>Attach an image file to this record to populate this field with an attachment Id. If a value has been set for the Image URL field, this value will be ignored.</inlineHelpText>
        <label>Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Image_URL__c</fullName>
        <description>Add or edit an image attachment to this record to make an image available for display on the webside, or override any image attachments by entering the URL of an image on another server here. Clear this field to use image attachments.</description>
        <inlineHelpText>Add or edit an image attachment to this record to make an image available for display on the webside, or override any image attachments by entering the URL of an image on another server here. Clear this field to use image attachments.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>evt__Image__c</fullName>
        <formula>IMAGE(BLANKVALUE(evt__Image_URL__c,IF(ISBLANK(evt__Image_Id__c),&apos;/s.gif&apos;,&apos;/servlet/servlet.FileDownload?file=&apos;+evt__Image_Id__c)), &apos;Image&apos; ,60 ,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Invitation_Code__c</fullName>
        <formula>&quot;INV&quot; + Name + RIGHT( UPPER(Id), 3)</formula>
        <label>Invitation Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Invitation_Status__c</fullName>
        <label>Invitation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Payment Pending</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Wait Listed</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Hard Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evt__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evt__Join_URL__c</fullName>
        <description>URL for the attendee to use in joining a web meeting event.  Set by the web meeting service during registration.</description>
        <inlineHelpText>URL for the attendee to use in joining a web meeting event.  Set by the web meeting service during registration.</inlineHelpText>
        <label>Join URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>evt__Last_Name__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK(  evt__Contact__c  ) ,  BLANKVALUE(  evt__Lead__r.LastName , &quot;&quot;) ,  BLANKVALUE(  evt__Contact__r.LastName , &quot;&quot;))),evt__Reg_Last_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lead invited to this event.  Leads are converted to Contacts when they register for an event.</description>
        <inlineHelpText>The lead invited to this event.  Leads are converted to Contacts when they register for an event.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Mailing_City__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK(  evt__Contact__c  ) ,  BLANKVALUE(  evt__Lead__r.City , &quot;&quot;) ,  BLANKVALUE(  evt__Contact__r.MailingCity , &quot;&quot;))),evt__Reg_City__c)</formula>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Mailing_Country__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK(  evt__Contact__c  ) ,  BLANKVALUE(  evt__Lead__r.Country , &quot;&quot;) ,  BLANKVALUE(  evt__Contact__r.MailingCountry , &quot;&quot;))),evt__Reg_Country__c)</formula>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Mailing_Postal_Code__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK(  evt__Contact__c  ) ,  BLANKVALUE(  evt__Lead__r.PostalCode , &quot;&quot;) ,  BLANKVALUE(  evt__Contact__r.MailingPostalCode , &quot;&quot;))),evt__Reg_Postal_Code__c)</formula>
        <label>Mailing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Mailing_State__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK(  evt__Contact__c  ) ,  BLANKVALUE(  evt__Lead__r.State , &quot;&quot;) ,  BLANKVALUE(  evt__Contact__r.MailingState , &quot;&quot;))),evt__Reg_State__c)</formula>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Mailing_Street__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK(  evt__Contact__c  ) ,  BLANKVALUE(  evt__Lead__r.Street , &quot;&quot;) ,  BLANKVALUE(  evt__Contact__r.MailingStreet , &quot;&quot;))),evt__Reg_Street__c)</formula>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>pymt__PaymentX__c</referenceTo>
        <relationshipLabel>Event Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Phone__c</fullName>
        <formula>IF(OR(ISBLANK( evt__Reg_First_Name__c),ISBLANK( evt__Reg_Last_Name__c)),(IF( ISBLANK( evt__Contact__c ) , BLANKVALUE( evt__Lead__r.Phone , &quot;&quot;) , BLANKVALUE( evt__Contact__r.Phone , &quot;&quot;))),evt__Reg_Phone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Primary_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Attendee</label>
        <referenceTo>evt__Attendee__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Reg_City__c</fullName>
        <description>City supplied on registration page.</description>
        <inlineHelpText>City supplied on registration page.</inlineHelpText>
        <label>Reg City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Reg_Company__c</fullName>
        <description>Company name provided on registration page.</description>
        <inlineHelpText>Company name provided on registration page.</inlineHelpText>
        <label>Reg Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Reg_Country__c</fullName>
        <description>Country provided on registration form.</description>
        <inlineHelpText>Country provided on registration form.</inlineHelpText>
        <label>Reg Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Reg_Email__c</fullName>
        <description>Email address provided on registration page.</description>
        <inlineHelpText>Email address provided on registration page.</inlineHelpText>
        <label>Reg Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>evt__Reg_First_Name__c</fullName>
        <description>First name supplied on registration page.</description>
        <inlineHelpText>First name supplied on registration page.</inlineHelpText>
        <label>Reg First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Reg_Last_Name__c</fullName>
        <description>Last name supplied on registration page.</description>
        <inlineHelpText>Last name supplied on registration page.</inlineHelpText>
        <label>Reg Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Reg_Phone__c</fullName>
        <description>Phone number supplied on registration page form.</description>
        <inlineHelpText>Phone number supplied on registration page form.</inlineHelpText>
        <label>Reg Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>evt__Reg_Postal_Code__c</fullName>
        <description>Postal code supplied on registration page.</description>
        <inlineHelpText>Postal code supplied on registration page.</inlineHelpText>
        <label>Reg Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Reg_State__c</fullName>
        <description>State supplied on registration page.</description>
        <inlineHelpText>State supplied on registration page.</inlineHelpText>
        <label>Reg State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Reg_Street__c</fullName>
        <description>Street address supplied on registration page.</description>
        <inlineHelpText>Street address supplied on registration page.</inlineHelpText>
        <label>Reg Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>evt__Reg_Title__c</fullName>
        <description>Title provided at registration.</description>
        <inlineHelpText>Title provided at registration.</inlineHelpText>
        <label>Reg Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Registration_Type__c</fullName>
        <description>Event fee name used to register this attendee.</description>
        <inlineHelpText>Event fee name used to register this attendee.</inlineHelpText>
        <label>Registration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Title__c</fullName>
        <formula>IF(ISBLANK( evt__Reg_Title__c),(IF( ISBLANK( evt__Contact__c ) , BLANKVALUE( evt__Lead__r.Title , &quot;&quot;) , BLANKVALUE( evt__Contact__r.Title , &quot;&quot;))),evt__Reg_Title__c)</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>evt__vCard_Memo__c</fullName>
        <description>Memo value to insert in vCard QR Code</description>
        <inlineHelpText>Memo value to insert in vCard QR Code</inlineHelpText>
        <label>vCard Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>evt__vCard_QR_Attachment__c</fullName>
        <description>Record ID of the attachment containing this attendee&apos;s vCard QR code image.</description>
        <inlineHelpText>Record ID of the attachment containing this attendee&apos;s vCard QR code image.</inlineHelpText>
        <label>vCard QR Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__vCard_QR_Generator__c</fullName>
        <formula>evt__Event__r.evt__vCard_QR_Generator__c</formula>
        <inlineHelpText>QR generator URL to use in building vCard QR for this attendee.</inlineHelpText>
        <label>vCard QR Generator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__vCard_QR_Image__c</fullName>
        <formula>IMAGE(IF(ISBLANK(evt__vCard_QR_Attachment__c),&apos;/s.gif&apos;,&apos;/servlet/servlet.FileDownload?file=&apos;+evt__vCard_QR_Attachment__c), &apos;Image not available.&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vCard QR Image</label>
        <type>Text</type>
    </fields>
</CustomObject>